crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_aerospace_classic_doll.snap
---
source: crates/app/src/tui/mod.rs
expression: screen
---
  1:Visigoth
                        ╔NOS═══════╗                        ┌ HEAT ────────────────────────────────┐
                        ║A 0/12    ║                        │Heat 21 / 30   diss 10                │
                        ║░░░░░░░░░░║                        │███████████████████████████░░░░░░░░░░░│
                        ║          ║                        │sinks 10× Single                      │
                        ║          ║                        │+3 hit  control 8+  shutdn 6+         │
                        ║          ║                        │ammo 4+  pilot 6+                     │
                        ║          ║                        │                                      │
                        ╚══════════╝                        └──────────────────────────────────────┘
            ┌LWG───────┐┌SI────────┐┌RWG───────┐            ┌ PILOT ───────────────────────────────┐
            │A 9/9     ││I 2/5     ││A 9/9     │            │ Gunnery 4+   Piloting 5+             │
            │██████████││████░░░░░░││██████████│            │ ░░░░░░   unhurt                      │
            │          ││          ││          │            └──────────────────────────────────────┘
            │          ││          ││          │            ┌ MOVE ────────────────────────────────┐
            │          ││          ││          │            │ Thrust safe 5  max 8                 │
            │          ││          ││          │            │ Vel 7  Alt 5   [v]                   │
            │          ││          ││          │            │ no crits   [c]                       │
            │          ││          ││          │            └──────────────────────────────────────┘
            │          ││          ││          │            ┌ WEAPONS / AMMO / EQUIP ──────────────┐
            │          ││          ││          │            │ ER Large Laser  NOS  H12   10        │
            └──────────┘└──────────┘└──────────┘            │                                      │
                        ┌AFT───────┐                        │                                      │
                        │A 7/7     │                        │                                      │
                        │██████████│                        │                                      │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
 Spc:dmg  u:rep  c:crit  p:pilot  f:face  Tab:panel  ?:help
