crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_alpha_strike_grid.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 949
expression: screen
---
  1:Atlas A   2:Atlas B   3:Atlas C   4:Atlas D
┌ Atlas AS7-D ───────────────────────────────────┐┌ Atlas AS7-D ───────────────────────────────────┐
│PV 52   SZ 4   BM   MV 6"   TMM 1               ││PV 52   SZ 4   BM   MV 6"   TMM 1               │
│Skill 4+   PV 52                                ││Skill 4+   PV 52                                │
│                                                ││                                                │
│Armor     ██████████  10/10                     ││Armor     ██████████  10/10                     │
│Structure ████████  8/8                         ││Structure ████████  8/8                         │
│                                                ││                                                │
│Heat      [0] 1  2  3  S                        ││Heat      [0] 1  2  3  S                        │
│Damage    S 5   M 5   L 2   E 0                 ││Damage    S 5   M 5   L 2   E 0                 │
│To-Hit    S 4+  M 6+  L 8+  E —                 ││To-Hit    S 4+  M 6+  L 8+  E —                 │
│Crits     Eng0  FC0  MP0  Wpn0                  ││Crits     Eng0  FC0  MP0  Wpn0                  │
│                                                ││                                                │
│Specials  AC2/2/-  IF1  LRM1/1/1                ││Specials  AC2/2/-  IF1  LRM1/1/1                │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
╔ Atlas AS7-D ═══════════════════════════════════╗┌ Atlas AS7-D ───────────────────────────────────┐
║PV 52   SZ 4   BM   MV 6"   TMM 1               ║│PV 52   SZ 4   BM   MV 6"   TMM 1               │
║Skill 4+   PV 52                                ║│Skill 4+   PV 52                                │
║                                                ║│                                                │
║Armor     ██████████  10/10                     ║│Armor     ██████████  10/10                     │
║Structure ████████  8/8                         ║│Structure ████████  8/8                         │
║                                                ║│                                                │
║Heat      [0] 1  2  3  S                        ║│Heat      [0] 1  2  3  S                        │
║Damage    S 5   M 5   L 2   E 0                 ║│Damage    S 5   M 5   L 2   E 0                 │
║To-Hit    S 4+  M 6+  L 8+  E —                 ║│To-Hit    S 4+  M 6+  L 8+  E —                 │
║Crits     Eng0  FC0  MP0  Wpn0                  ║│Crits     Eng0  FC0  MP0  Wpn0                  │
║                                                ║│                                                │
║Specials  AC2/2/-  IF1  LRM1/1/1                ║│Specials  AC2/2/-  IF1  LRM1/1/1                │
╚════════════════════════════════════════════════╝└────────────────────────────────────────────────┘
 Spc:dmg  u:repair  o/i:heat  c:crits  t:to-hit  1:scale  ,/.:unit  a:add  D:del  S:sess  ?:help
