crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_ba_classic_doll.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 1838
expression: screen
---
  1:Achileus Light Battle Armor
            ╔T1════════╗┌T2────────┐┌T3────────┐            ┌ SQUAD ───────────────────────────────┐
            ║A 6/6     ║│A 0/6     ││A 6/6     │            │Troopers 3/4                          │
            ║██████████║│░░░░░░░░░░││██████████│            │█████████████████████████████░░░░░░░░░│
            ║I 1/1     ║│I 0/1     ││I 1/1     │            │T1 6  T2 —  T3 6  T4 6                │
            ║██████████║│░░░░░░░░░░││██████████│            │                                      │
            ║          ║│          ││          │            │                                      │
            ║          ║│          ││          │            │                                      │
            ╚══════════╝└──────────┘└──────────┘            └──────────────────────────────────────┘
            ┌T4────────┐                                    ┌ SKILLS ──────────────────────────────┐
            │A 6/6     │                                    │ Gunnery 4+   Anti-Mech 5+   BV 189   │
            │██████████│                                    │                                      │
            │I 1/1     │                                    └──────────────────────────────────────┘
            │██████████│                                    ┌ MOVE ────────────────────────────────┐
            │          │                                    │ Move 1  Jump 3                       │
            │          │                                    │ stationary   [v]                     │
            │          │                                    │ deployed                             │
            │          │                                    └──────────────────────────────────────┘
            │          │                                    ┌ WEAPONS / AMMO / EQUIP ──────────────┐
            │          │                                    │ David Light Ga… BD        1          │
            └──────────┘                                    │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            └──────────────────────────────────────┘
 Spc:dmg  u:rep  c:crit  p:pilot  f:face  Tab:panel  ?:help
