crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_ba_per_suit_ammo.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 1873
expression: screen
---
  1:Elemental Battle Armor
            ╔T1════════╗┌T2────────┐┌T3────────┐            ┌ SQUAD ───────────────────────────────┐
            ║A 6/6     ║│A 6/6     ││A 0/6     │            │Troopers 3/4                          │
            ║██████████║│██████████││░░░░░░░░░░│            │█████████████████████████████░░░░░░░░░│
            ║I 1/1     ║│I 1/1     ││I 0/1     │            │T1 6  T2 6  T3 —  T4 6                │
            ║██████████║│██████████││░░░░░░░░░░│            │SRM 2   1  2  —  2                    │
            ║          ║│          ││          │            │[move doll cursor to pick firing suit]│
            ║          ║│          ││          │            │                                      │
            ╚══════════╝└──────────┘└──────────┘            └──────────────────────────────────────┘
            ┌T4────────┐                                    ┌ SKILLS ──────────────────────────────┐
            │A 6/6     │                                    │ Gunnery 4+   Anti-Mech 5+   BV 189   │
            │██████████│                                    │                                      │
            │I 1/1     │                                    └──────────────────────────────────────┘
            │██████████│                                    ┌ MOVE ────────────────────────────────┐
            │          │                                    │ Move 1  Jump 3                       │
            │          │                                    │ stationary   [v]                     │
            │          │                                    │ deployed                             │
            │          │                                    └──────────────────────────────────────┘
            │          │                                    ┌ WEAPONS / AMMO / EQUIP ──────────────┐
            │          │                                    │ SRM 2           T1        2/msl  ✓1/3│
            └──────────┘                                    │ SRM 2 Ammo       1/2                 │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            └──────────────────────────────────────┘
 Spc:dmg  u:rep  c:crit  p:pilot  f:face  Tab:panel  ?:help
