crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_battle_armor_as_card.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 2024
expression: screen
---
  1:Achileus Light Battle Armor
╔ Achileus Light Battle Armor [David](Sqd4) ═════╗
║PV 15   SZ 1   BA   MV 6"j   TMM 1              ║
║Skill 4+   PV 15                                ║
║                                                ║
║Armor     █  1/1                                ║
║Structure ██  2/2                               ║
║                                                ║
║Heat      [0] 1  2  3  S                        ║
║Damage    S 1   M 0*  L 0   E 0                 ║
║To-Hit    S 4+  M 6+  L —   E —                 ║
║Crits     Eng0  FC0  MP0  Wpn0                  ║
║                                                ║
║Specials  AM  CAR4  MEC  STL                    ║
╚════════════════════════════════════════════════╝














 Spc:dmg  u:repair  o/i:heat  c:crits  t:to-hit  1:scale  ,/.:unit  a:add  D:del  S:sess  ?:help
